--- a/HTML/Personal/Credits.css
+++ b/HTML/Personal/Credits.css
@@ -1011,15 +1011,21 @@ button:hover {
     width: 100%;
     height: 100%;
   }
+  .service-category{
+    padding: 0;
+  }
   .credits-section,
   .paragrap,
   .title,
   .breadcrumb,
   .credits-section2,
-  .credit-services {
+  .credit-services,.icon-menu {
     margin: 0 auto;
-    width: 500px;
-    padding: 0 1rem;
+    width: 100%;
+    
+  }
+  .paragrap{
+    padding: 0 2rem;
   }
   .footer-social,.footer{
     display: none;
@@ -1027,8 +1033,9 @@ button:hover {
   .layout-right{
     width: 100%;
     position: relative;
+    top: 7rem;
     left: 10rem;
     margin: 0 auto;
-    
+
   }
 }
