--- a/HTML/Personal/Deposits.css
+++ b/HTML/Personal/Deposits.css
@@ -792,4 +792,146 @@ p {
 .gridt-footer img{
     width: 100px;
 }
+@media (max-width: 768px) {
+  .title {
+    font-size: 20px;
+  }
+
+  .credits-title {
+    font-size: 20px;
+  }
+
+  .breadcrumb {
+    font-size: 12px;
+  }
+
+  .credits-info p {
+    font-size: 14px;
+  }
+  .nav-item {
+    display: none;
+  }
+  .top-page {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .nav-menu {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    padding: 0 4rem;
+    right: 12rem;
+  }
+  .flag-cam > img {
+    width: 50px;
+  }
+  .nav-link {
+    font-size: 0.5rem;
+  }
+  #none-class {
+    display: none;
+  }
+  .image-slide {
+    width: 100%;
+    height: 250px;
+  }
+  .image-slide > img {
+    width: 100%;
+  }
+  .btn-container {
+    transform: translate(0px, 150px);
+    color: #003366;
+  }
+  .list-under-imageslide {
+    overflow: scroll;
+    width: 1000px;
+  }
+  .li-flex i {
+    transform: translate(-20px);
+  }
+  .width-under-imageslide {
+    width: 530px;
+    overflow: scroll;
+  }
+  .width-icon {
+    width: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .grid-2x4 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+  .scroll-footer {
+    overflow-y: scroll;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+  .col-md-3 h3 {
+    font-size: 15px;
+  }
+  .col-md-3 p {
+    font-size: 12px;
+  }
+  .col-md-3 img {
+    width: 200px;
+  }
+  .link-video-ace > img {
+    width: 100%;
+  }
+  .col-md-3 {
+    width: 100%;
+    height: 270px;
+  }
+  .footer-social {
+    display: flex;
+    overflow: scroll;
+  }
+  .nav-item a {
+    display: none;
+  }
+  .img-show {
+    max-width: 900px;
+    max-height: 400px;
+  }
+  .img-show > img {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .service-category{
+    padding: 0;
+  }
+  .credits-section,
+  .paragrap,
+  .title,
+  .breadcrumb,
+  .credits-section2,
+  .credit-services,.icon-menu {
+    margin: 0 auto;
+    width: 100%;
+    
+  }
+  .paragrap{
+    padding: 0 2rem;
+  }
+  .footer-social,.footer{
+    display: none;
+  }
+  .layout-right{
+    width: 100%;
+    position: relative;
+    top: 7rem;
+    left: 12rem;
+    margin: 0 auto;
+
+  }
+  .credits-section{
+    margin: 2rem 0;
+  }
+}
 
